Revision history for {{$dist->name}}

{{$NEXT}}

4.210     2015-10-17T17:16:14Z

  - Add GitHubREADME::Badge
  - Allow overriding readme building phase from ENV.

4.209     2015-07-19T02:13:42Z

  - Replace ContributorsFromGit with Git::Contributors.
    Thanks to Karen Etheridge for the pull req! (gh-2)

4.208     2015-05-26T01:30:53Z

  - Remove 'builder' option and just use MakeMaker.
    Any dist can '-remove = MakeMaker' and add ModuleBuild/DualBuilders.
    This also removes this dist's dependency on MB and DB.
    Thanks to Karen Etheridge for prompting me to clean the cruft! [rt-104634]
  - Remove DZP Test::PodSpelling from prereqs (recommends only).
  - Add cover_db to generated manifest skip file.

4.207     2015-04-01T05:14:25Z

  - Add /x to skip_plugins regexp.
  - Make skip_plugins work on bundles, too.
  - Add basic LICENSE file when minting.

4.206     2015-03-01T03:58:20Z

  - Remove Test::ChangesHasContent so that xt doesn't fail in CI.
    (Before Release CheckChangeHasContent remains.)

4.205     2015-02-28T18:12:15Z

  - Don't Gather files copied from release.

4.204     2015-02-28T03:54:45Z

  - Set authority to 'cpan:RWSTAUNER' by default so that the bundle
    operates on computers without a ~/.pause file.
  - Copy LICENSE from build to root and automatically commit it on release.
  - Add 'copy_files' attribute to specify additional files to copy from build.
  - Bump ReadmeAnyFromPod prereq and set 'phase' to 'release'.

4.203     2014-12-11T23:47:53Z

  - Trade Bugtracker and Repository for AutoMetaResources.
  - Put PkgVersion before other FileMunger plugins
  - Add local, perl5, and fatlib as no_index directories

4.202     2014-05-05T03:31:07Z

  - Bump prereq on @TestingMania to use Test::NoTabs instead of NoTabsTest.
  - Change README minter template from pod to markdown.

4.201     2014-02-01T16:40:02Z

  - Bump Dist::Zilla and Pod::Weaver prereqs for Encoding updates.

4.200     2014-02-01T16:19:23Z
