@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+  - Weave 'test_synopsis' region before Synopsis for Test::Synopsis.
+
 4.210     2015-10-17T17:16:14Z
 
   - Add GitHubREADME::Badge
